kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/AddingNullability.kt
package test

import java.util.*

public open class AddingNullability {
    public open fun foo() : Int {
        throw UnsupportedOperationException()
    }
}
